# sketch-vs-ai

./: .gitignore  README.md  pyproject.toml
app/: api.py  main.py
static/: index.html
